--- a/LojaVirtual-APP/angular.json
+++ b/LojaVirtual-APP/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "LojaVirtualMae-APP": {
+    "LojaVirtual-APP": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/LojaVirtualMae-APP",
+            "outputPath": "dist/LojaVirtual-APP",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,14 +24,10 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min-minty.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.js",
-	            "node_modules/popper.js/dist/umd/popper.js",
-	            "node_modules/bootstrap/dist/js/bootstrap.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -67,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "LojaVirtualMae-APP:build"
+            "browserTarget": "LojaVirtual-APP:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "LojaVirtualMae-APP:build:production"
+              "browserTarget": "LojaVirtual-APP:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "LojaVirtualMae-APP:build"
+            "browserTarget": "LojaVirtual-APP:build"
           }
         },
         "test": {
@@ -115,19 +111,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "LojaVirtualMae-APP:serve"
+            "devServerTarget": "LojaVirtual-APP:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "LojaVirtualMae-APP:serve:production"
+              "devServerTarget": "LojaVirtual-APP:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "LojaVirtualMae-APP",
+  "defaultProject": "LojaVirtual-APP",
   "cli": {
-    "analytics": "ffa1f4a3-1383-44f1-9391-a82edc764575"
+    "analytics": "23572cd5-01e4-490b-9597-42ec8aaa6ebf"
   }
 }
