--- a/LojaVirtual-APP/package.json
+++ b/LojaVirtual-APP/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~10.1.1",
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
+    "@auth0/angular-jwt": "^5.0.1",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.2",
+    "jwthelper": "0.0.4",
     "ngx-bootstrap": "^6.1.0",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.6.0",
