--- a/LojaVirtualMae.API/appsettings.json
+++ b/LojaVirtualMae.API/appsettings.json
@@ -11,6 +11,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=root;password=root;database=lojavirtualmae"
+    "DefaultConnection": "server=localhost;userid=root;password=123456;database=lojavirtualmae"
   }
 }
