--- a/LojaVirtual-APP/package.json
+++ b/LojaVirtual-APP/package.json
@@ -22,6 +22,7 @@
     "@auth0/angular-jwt": "^5.0.1",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.2",
+    "fast-json-patch": "^3.0.0-1",
     "jquery": "^3.5.1",
     "jwthelper": "0.0.4",
     "ngx-bootstrap": "^6.1.0",
