--- a/LojaVirtual-APP/package.json
+++ b/LojaVirtual-APP/package.json
@@ -21,10 +21,12 @@
     "@angular/router": "~10.1.1",
     "@auth0/angular-jwt": "^5.0.1",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "@rxweb/reactive-form-validators": "^2.1.2",
     "bootstrap": "^4.5.2",
     "fast-json-patch": "^3.0.0-1",
     "jquery": "^3.5.1",
     "jwthelper": "0.0.4",
+    "ng2-currency-mask": "^9.0.2",
     "ngx-bootstrap": "^6.1.0",
     "ngx-toastr": "^13.0.0",
     "popper.js": "^1.16.1",
