--- a/LojaVirtual-APP/package.json
+++ b/LojaVirtual-APP/package.json
@@ -28,6 +28,7 @@
     "jwthelper": "0.0.4",
     "ng2-currency-mask": "^9.0.2",
     "ngx-bootstrap": "^6.1.0",
+    "ngx-mask": "^10.0.4",
     "ngx-toastr": "^13.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
